switches backend to uv for dependency management, fix some bugs

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,29 +1,15 @@
-FROM rust:1.75-slim AS rust-builder
-
-RUN apt-get update && apt-get install -y \
-    python3-dev \
-    python3-pip \
-    && rm -rf /var/lib/apt/lists/*
-
-RUN pip3 install --no-cache-dir --break-system-packages maturin
-
-WORKDIR /build
-COPY packages/metro-mdp-lib ./packages/metro-mdp-lib
-
-WORKDIR /build/packages/metro-mdp-lib
-RUN maturin build --release
-
 FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY --from=rust-builder /build/packages/metro-mdp-lib/target/wheels/*.whl /tmp/
-RUN pip install --no-cache-dir --break-system-packages /tmp/*.whl && rm /tmp/*.whl
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /usr/local/bin/uv
 
-COPY backend/requirements.txt .
-RUN pip install --no-cache-dir --break-system-packages -r requirements.txt
+COPY backend/pyproject.toml backend/uv.lock* ./
+RUN uv sync --frozen --no-cache
 
 COPY backend/app ./app
+
+ENV PATH="/app/.venv/bin:$PATH"
 
 EXPOSE 8000
 
