--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -2,10 +2,14 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY backend/requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /usr/local/bin/uv
+
+COPY backend/pyproject.toml backend/uv.lock* ./
+RUN uv sync --no-cache
 
 COPY backend/app ./app
+
+ENV PATH="/app/.venv/bin:$PATH"
 
 EXPOSE 8000
 
