add metro route planning library with mdp and dfs

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "uvicorn[standard]>=0.27.0",
     "pydantic>=2.6.0",
     "pydantic-settings>=2.1.0",
+    "metro-mdp",
 ]
 
 [project.optional-dependencies]
@@ -22,3 +23,6 @@ target-version = "py311"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "UP"]
+
+[tool.uv.sources]
+metro-mdp = { path = "../packages/metro-mdp-lib", editable = true }
