--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,13 +1,16 @@
 FROM python:3.11-slim
 
-WORKDIR /app
-
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /usr/local/bin/uv
+
+COPY packages/metro-mdp-lib /packages/metro-mdp-lib
+
+WORKDIR /app
 
 COPY backend/pyproject.toml backend/uv.lock* ./
 RUN uv sync --no-cache
 
 COPY backend/app ./app
+COPY backend/data ./data
 
 ENV PATH="/app/.venv/bin:$PATH"
 
