--- a/.github/workflows/release-python-package.yml
+++ b/.github/workflows/release-python-package.yml
@@ -1,4 +1,4 @@
-name: Release Python Package
+name: release python lib
 
 on:
   push:
@@ -12,67 +12,26 @@ jobs:
   build-and-release:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-      - name: Install build dependencies
+      - name: build package
         run: |
-          python -m pip install --upgrade pip
           pip install build hatchling
-
-      - name: Build package
-        run: |
           cd packages/metro-mdp-lib
           python -m build
 
-      - name: Extract version from tag
-        id: get_version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: create release
+        uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ github.ref_name }}
-          release_name: Release ${{ github.ref_name }}
+          files: packages/metro-mdp-lib/dist/*
           body: |
-            ## Metro MDP Python Package Release ${{ github.ref_name }}
+            python package release
 
-            Install via pip:
-            ```bash
-            pip install https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/metro_mdp-${{ steps.get_version.outputs.VERSION }}-py3-none-any.whl
-            ```
-
-            Or install directly from GitHub:
+            install:
             ```bash
             pip install git+https://github.com/${{ github.repository }}.git@${{ github.ref_name }}#subdirectory=packages/metro-mdp-lib
             ```
-          draft: false
-          prerelease: false
-
-      - name: Upload wheel to release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: packages/metro-mdp-lib/dist/metro_mdp-${{ steps.get_version.outputs.VERSION }}-py3-none-any.whl
-          asset_name: metro_mdp-${{ steps.get_version.outputs.VERSION }}-py3-none-any.whl
-          asset_content_type: application/zip
-
-      - name: Upload source distribution to release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: packages/metro-mdp-lib/dist/metro-mdp-${{ steps.get_version.outputs.VERSION }}.tar.gz
-          asset_name: metro-mdp-${{ steps.get_version.outputs.VERSION }}.tar.gz
-          asset_content_type: application/gzip
