--- a/.github/workflows/release-rust-package.yml
+++ b/.github/workflows/release-rust-package.yml
@@ -1,4 +1,4 @@
-name: release rust package
+name: Release Rust Package
 
 on:
   push:
@@ -19,66 +19,41 @@ jobs:
       - uses: actions/setup-python@v6
         with:
           python-version: 3.x
-      - name: build wheels
+      - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
           args: --release --out dist --find-interpreter
           working-directory: packages/metro-mdp-rust
           manylinux: auto
-      - name: upload wheels
+      - name: Upload artifacts
         uses: actions/upload-artifact@v5
         with:
           name: wheels-linux-${{ matrix.target }}
           path: packages/metro-mdp-rust/dist
 
-  windows:
-    runs-on: windows-latest
-    strategy:
-      matrix:
-        target: [x64]
-    steps:
-      - uses: actions/checkout@v6
-      - uses: actions/setup-python@v6
-        with:
-          python-version: 3.x
-      - name: build wheels
-        uses: PyO3/maturin-action@v1
-        with:
-          target: ${{ matrix.target }}
-          args: --release --out dist --find-interpreter
-          working-directory: packages/metro-mdp-rust
-      - name: upload wheels
-        uses: actions/upload-artifact@v5
-        with:
-          name: wheels-windows-${{ matrix.target }}
-          path: packages/metro-mdp-rust/dist
-
   macos:
     runs-on: macos-latest
-    strategy:
-      matrix:
-        target: [x86_64, aarch64]
     steps:
       - uses: actions/checkout@v6
       - uses: actions/setup-python@v6
         with:
           python-version: 3.x
-      - name: build wheels
+      - name: Build wheel
         uses: PyO3/maturin-action@v1
         with:
-          target: ${{ matrix.target }}
+          target: aarch64
           args: --release --out dist --find-interpreter
           working-directory: packages/metro-mdp-rust
-      - name: upload wheels
+      - name: Upload artifacts
         uses: actions/upload-artifact@v5
         with:
-          name: wheels-macos-${{ matrix.target }}
+          name: wheels-macos-aarch64
           path: packages/metro-mdp-rust/dist
 
   release:
     runs-on: ubuntu-latest
-    needs: [linux, windows, macos]
+    needs: [linux, macos]
     steps:
       - uses: actions/download-artifact@v6
         with:
