--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,4 @@
-# Backend Configuration
 PORT=8000
 ENVIRONMENT=development
 
-# Add any future API keys or database URLs here
+# configuração básica - suficiente pra rodar local
